--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -122,6 +122,8 @@ endif()
 
 _add_test( bsp_schedulers )
 
+_add_test( max_bsp_schedulers )
+
 _add_test( bsp_schedulers_mem_const )
 
 _add_test( bsp_improvementschedulers )
