--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,12 @@ _add_test( kl_lambda )
 
 _add_test( kl_util )
 
+_add_test( kl_bsp_cost )
+
+_add_test( kl_bsp_improver_test )
+
+_add_test( kl_bsp_affinity_test )
+
 _add_test( heaps )
 
 _add_test( kl_mem_constr )
