--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,15 +72,19 @@ jobs:
           # Run tests while collecting coverage
           ctest --output-on-failure --output-junit test_results.xml
 
-          # Generate lcov report
-          sudo apt-get install -y lcov
-          lcov --capture --directory . --output-file coverage.info --ignore-errors empty,mismatch
+          # Generate lcov report ONLY for OneStopParallel/include
+          lcov --capture --directory . \
+               --output-file coverage.info \
+               --ignore-errors empty,mismatch \
+               --include '*/OneStopParallel/include/*'
 
-          # Remove system and test files from report
-          lcov --remove coverage.info '/usr/*' '*/tests/*' '*/third_party/*' --output-file coverage.info
+          # Clean report (strip system + tests + apps if we want)
+          lcov --remove coverage.info '/usr/*' '*/tests/*' '*/apps/*' \
+               --output-file coverage.info
 
           # Generate HTML report
           genhtml coverage.info --output-directory coverage_html
+
 
       - name: Upload coverage artifacts
         uses: actions/upload-artifact@v4
