--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,22 +69,22 @@ jobs:
       - name: Run tests with coverage
         working-directory: ${{ github.workspace }}/build
         run: |
-          # Run tests while collecting coverage
           ctest --output-on-failure --output-junit test_results.xml
 
-          # Generate lcov report ONLY for OneStopParallel/include
+          # Capture coverage ONLY from include/
           lcov --capture --directory . \
                --output-file coverage.info \
                --ignore-errors empty,mismatch \
                --include '*/OneStopParallel/include/*'
 
-          # Clean report (strip system + tests + apps if we want)
-          lcov --remove coverage.info '/usr/*' '*/tests/*' '*/apps/*' \
-               --output-file coverage.info
+          # Remove unused warnings: this is the KEY fix
+          lcov --ignore-errors unused,empty,mismatch --remove coverage.info '*/tests/*' '*/apps/*' --output-file coverage.info
+
+          # Optional: silence header template warnings
+          geninfo --rc geninfo_unexecuted_blocks=1 coverage.info
 
           # Generate HTML report
           genhtml coverage.info --output-directory coverage_html
-
 
       - name: Upload coverage artifacts
         uses: actions/upload-artifact@v4
