partitioning test suite, draft v1

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -51,6 +51,7 @@ endif()
 if (COPT_FOUND)
 _add_executable( ilp_bsp_scheduler )
 _add_executable( ilp_hypergraph_partitioner )
+_add_executable( ilp_partitioning_test_suite )
 endif()
 
 endif()
