added policy unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,8 @@ _add_test( kl_util )
 
 _add_test( kl_bsp_cost )
 
+_add_test( kl_bsp_cost_policies )
+
 _add_test( kl_bsp_improver_test )
 
 _add_test( kl_bsp_affinity_test )
