added max bsp comm affinity

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -68,6 +68,8 @@ _add_test( kl_bsp_affinity_test )
 
 _add_test( kl_max_bsp_affinity_test )
 
+_add_test( kl_max_bsp_comm_affinity )
+
 _add_test( heaps )
 
 _add_test( kl_mem_constr )
