added bsp comm affinities unit test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -62,6 +62,8 @@ _add_test( kl_bsp_cost )
 
 _add_test( kl_bsp_cost_policies )
 
+_add_test( kl_bsp_comm_affinities )
+
 _add_test( kl_bsp_improver_test )
 
 _add_test( kl_bsp_affinity_test )
