more total unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,7 +66,7 @@ _add_test( kl_bsp_comm_affinities )
 
 _add_test( kl_bsp_improver_test )
 
-_add_test( kl_bsp_max_improver_test )
+#_add_test( kl_bsp_max_improver_test )
 
 _add_test( kl_bsp_affinity_test )
 
