more unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,8 @@ _add_test( kl_bsp_improver_test )
 
 _add_test( kl_bsp_affinity_test )
 
+_add_test( kl_bsp_incremental_affinity_test )
+
 _add_test( kl_cross_step_work_affinity_test )
 
 _add_test( kl_max_bsp_affinity_test )
