--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -52,13 +52,15 @@ _add_test( directed_graph_util )
 
 _add_test( directed_graph_top_sort )
 
-_add_test( kl_total )
+#_add_test( kl_total )
 
-_add_test( kl_lambda )
+#_add_test( kl_lambda )
 
 _add_test( kl_util )
 
-_add_test( kl_bsp_cost_policies )
+#_add_test( kl_bsp_cost_policies )
+
+_add_test( kl_bsp_comm_cost )
 
 _add_test( kl_bsp_comm_affinities )
 
