--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -32,6 +32,8 @@ _add_executable( graph_analyser )
 
 _add_executable( graph_converter )
 
+_add_executable( kl_profile )
+
 if(Boost_FOUND)
 
 _add_executable( osp_turnus )
